Added in divi 2.7.1 css.

--- a/app/index.jade
+++ b/app/index.jade
@@ -2,6 +2,17 @@ doctype html
 html
   head
     title Frontend Builder
+
+    // Divi 2.7.1 Stylesheets
+    link(rel="stylesheet"
+         href="http://www.elegantthemes.com/preview/Divi/wp-content/themes/Divi/style.css?ver=2.7.1")
+    link(rel="stylesheet"
+         href="http://www.elegantthemes.com/preview/Divi/wp-content/themes/Divi/epanel/shortcodes/css/shortcodes.css?ver=2.7.1")
+    link(rel="stylesheet"
+         href="http://www.elegantthemes.com/preview/Divi/wp-content/themes/Divi/epanel/shortcodes/css/shortcodes_responsive.css?ver=2.7.1")
+    link(rel="stylesheet"
+         href="http://www.elegantthemes.com/preview/Divi/wp-content/themes/Divi/includes/builder/styles/magnific_popup.css?ver=2.7.1")
+
     link(rel="stylesheet"
          href="bundle.css")
   body
