Updated form button component.

--- a/app/components/forms/form-button/form-button.less
+++ b/app/components/forms/form-button/form-button.less
@@ -1,3 +1,4 @@
+/* Form Button */
 .et-fb-form-button {
   outline: none;
   background: #F1F5F9;
@@ -9,16 +10,19 @@
   font-weight: 600;
   line-height: normal;
 
+  // Primary
   &--primary {
     background: #2B87DA;
     color: #FFFFFF;
   }
 
+  // Success
   &--success {
     background: #29C4A9;
     color: #FFFFFF;
   }
 
+  // Inverse
   &--inverse {
     background: #3E5062;
     color: #FFFFFF;
