Updated text input and textarea component styles.

--- a/app/components/forms/form-textarea/form-textarea.less
+++ b/app/components/forms/form-textarea/form-textarea.less
@@ -10,6 +10,13 @@
   font-weight: 400;
   line-height: normal;
   vertical-align: top;
+  transition: background 0.3s ease,
+              box-shadow 0.3s ease,
+              color 0.3s ease;
+
+  &:focus {
+    background: #E0E5EA;
+  }
 
   // Error
   &--error {
