--- a/app/components/forms/form-text-input/form-text-input.less
+++ b/app/components/forms/form-text-input/form-text-input.less
@@ -14,6 +14,13 @@
   font-weight: 400;
   line-height: normal;
   box-shadow: inset 0 0 0 2px transparent;
+  transition: background 0.3s ease,
+              box-shadow 0.3s ease
+              color 0.3s ease;
+
+  &:focus {
+    background: #E0E5EA;
+  }
 }
 
 .et-fb-form-input {
