--- a/app/components/forms/form-text-input/form-text-input.less
+++ b/app/components/forms/form-text-input/form-text-input.less
@@ -5,7 +5,9 @@
 .et-fb-form-input[type=tel],
 .et-fb-form-input[type=text] {
   outline: none;
+  display: inline-block;
   background: #F1F5F9;
+  max-height: 30px;
   border: 0;
   border-radius: 3px;
   padding: 8px 20px;
