--- a/app/components/forms/form-button/form-button.less
+++ b/app/components/forms/form-button/form-button.less
@@ -1,7 +1,9 @@
 /* Form Button */
 .et-fb-form-button {
   outline: none;
+  display: inline-block;
   background: #F1F5F9;
+  max-height: 30px;
   border: 0;
   border-radius: 3px;
   padding: 8px 20px;
@@ -9,22 +11,36 @@
   font-size: 0.75rem;
   font-weight: 600;
   line-height: normal;
+  cursor: pointer;
+  transition: background 0.3s ease;
 
   // Primary
   &--primary {
     background: #2B87DA;
     color: #FFFFFF;
+
+    &:hover {
+      background: #007CC3;
+    }
   }
 
   // Success
   &--success {
     background: #29C4A9;
     color: #FFFFFF;
+
+    &:hover {
+      background: #00BBA3;
+    }
   }
 
   // Inverse
   &--inverse {
     background: #3E5062;
     color: #FFFFFF;
+
+    &:hover {
+      background: #4D565F;
+    }
   }
 }
