--- a/app/components/forms/form-button/form-button.less
+++ b/app/components/forms/form-button/form-button.less
@@ -7,12 +7,19 @@
   border: 0;
   border-radius: 3px;
   padding: 8px 20px;
+  box-sizing: border-box;
   color: #4C5866;
   font-size: 0.75rem;
   font-weight: 600;
   line-height: normal;
   cursor: pointer;
   transition: background 0.3s ease;
+
+  // Block
+  &--block {
+    display: block;
+    width: 100%;
+  }
 
   // Primary
   &--primary {
