--- a/app/components/button/button.less
+++ b/app/components/button/button.less
@@ -6,12 +6,13 @@
   max-height: 40px;
   border: 0;
   border-radius: 3px;
-  padding: 12px 20px;
+  padding: 12px;
   box-sizing: border-box;
+  vertical-align: middle;
   color: #4C5866;
   font-size: 0.875rem;
   font-weight: 600;
-  line-height: normal;
+  line-height: 1;
   cursor: pointer;
   transition: background 0.3s ease;
 
