--- a/app/components/forms/form-button/form-button.less
+++ b/app/components/forms/form-button/form-button.less
@@ -6,12 +6,13 @@
   max-height: 30px;
   border: 0;
   border-radius: 3px;
-  padding: 8px 20px;
+  padding: 9px;
   box-sizing: border-box;
+  vertical-align: middle;
   color: #4C5866;
   font-size: 0.75rem;
   font-weight: 600;
-  line-height: normal;
+  line-height: 1;
   cursor: pointer;
   transition: background 0.3s ease;
 
