Added in round & large modifiers for button components.

--- a/app/components/button/button.less
+++ b/app/components/button/button.less
@@ -32,6 +32,17 @@
     }
   }
 
+  // Large
+  &--large {
+    max-height: 60px;
+    padding: 22px;
+  }
+
+  // Round
+  &--round {
+    border-radius: 100px;
+  }
+
   // Success
   &--success {
     background: #29C4A9;
